--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -72,10 +72,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       myDocker:
-        image: ghcr.io/${{ secrets.DOCKERHUB_USERNAME }}/cloudlab5:latest
-        credentials:
-            username: ${{ secrets.DOCKERHUB_USERNAME }}
-            password: ${{  secrets.DOCKER_CONTAINER_REGISTRY_TOKEN }}
+        image: ghcr.io/ilkovale/cloudlab5:latest
         ports:
         - 80:80
     steps:
