--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -51,7 +51,7 @@ jobs:
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ilkovale
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Set up Docker Buildx
@@ -64,7 +64,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cloudlab5:latest
+          tags: ilkovale/cloudlab5:latest
   pull-and-check: 
     if: ${{ always() && contains(join(needs.*.result, ','), 'success') }}
     needs: [build-and-push]
@@ -72,9 +72,10 @@ jobs:
     runs-on: ubuntu-latest
     services:
       myDocker:
-        image: ghcr.io/ilkovale/cloudlab5:latest
+        image: ilkovale/cloudlab5:latest
         ports:
         - 80:80
     steps:
       - name: docker
+        id: result
         run: curl localhost
