--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -77,5 +77,11 @@ jobs:
         - 80:80
     steps:
       - name: docker
-        id: result
-        run: curl localhost
+        id: curling
+        run: curl -s -o /dev/null -w "%{http_code}" localhost
+      - name: assertions
+        uses: nick-fields/assert-action@v1
+        with:
+          expected: 200
+          actual: ${{ steps.curling.outputs.value }}
+        
